--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@next/font": "^14.2.15",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-p5": "^1.4.1",
+    "tldraw": "^3.4.1"
   },
   "devDependencies": {
     "@types/node": "^20",
