--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   },
   "dependencies": {
     "@next/font": "^14.2.15",
+    "canvas": "^2.11.2",
+    "konva": "^9.3.16",
     "next": "15.0.3",
+    "p5": "^1.11.1",
     "react": "19.0.0-rc-66855b96-20241106",
+    "react-canvas-draw": "^1.2.1",
     "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-konva": "^18.2.10",
     "react-p5": "^1.4.1",
     "tldraw": "^3.4.1"
   },
