--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     "lucide-react": "^0.477.0",
     "next": "15.0.3",
     "p5": "^1.11.1",
-    "react": "19.0.0-rc-66855b96-20241106",
+    "react": "^18.0.0",
     "react-canvas-draw": "^1.2.1",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-dom": "^18.0.0",
     "react-konva": "^18.2.10",
     "react-p5": "^1.4.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
-    "tldraw": "^3.4.1"
+    "tldraw": "^3.6.1"
   },
   "devDependencies": {
     "@types/node": "^20",
