--- a/package.json
+++ b/package.json
@@ -11,19 +11,22 @@
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-toast": "^1.2.6",
     "canvas": "^3.0.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.5.2",
     "konva": "^9.3.16",
     "lucide-react": "^0.477.0",
-    "next": "15.0.3",
+    "next": "^15.2.4",
+    "next-themes": "^0.4.6",
     "p5": "^1.11.1",
-    "react": "19.0.0-rc-66855b96-20241106",
+    "react": "19.0.0",
     "react-canvas-draw": "^1.2.1",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
+    "react-dom": "19.0.0",
     "react-konva": "^18.2.10",
     "react-p5": "^1.4.1",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "tldraw": "^3.4.1"
